# universal_robot_ign

./: CMakeLists.txt  README.md  package.xml  requirements.txt  update_model.sh
env-hooks/: ignition.dsv.in
ign/: gui.config
include/universal_robot_ign/: joint_position_controller.hpp  joint_state_publisher.hpp  joint_trajectory_controller.hpp
launch/: robotiq140_demo.launch.py  test.launch.py  test.rviz  test2.launch.py  ur10_ign.launch.py  ur10_ign_control_position.launch.py  ur10_move_group_server.launch.py  ur10_moveit2_demo.launch.py  ur10_position_control_demo.launch.py  ur10_robotiq140_demo.launch.py  ur10_robotiq140_ign.launch.py
models/robotiq140/: model.config  model.sdf  model.sdf.xacro  model.sdf.xmacro  robotiq140.def.xacro  robotiq140.def.xmacro  robotiq140_position_controller.def.xmacro
models/ur10/: model.sdf  model.sdf.xacro  model.sdf.xmacro  ur10.def.xacro  ur10_position_controller.def.xacro
models/ur10_robotiq140/: model.config  model.sdf  model.sdf.xacro  model.sdf.xmacro
models/ur3/: model.sdf.xacro  ur3.def.xacro  ur3_position_controller.def.xacro
models/ur5/: model.config  model.sdf  model.sdf.xacro  ur5.def.xacro  ur5_position_controller.def.xacro
nodes/: joint_controller_node.cpp  joint_position_controller_node.cpp  joint_state_publisher_node.cpp  joint_trajectory_controller_node.cpp
plugins/robotiq_controller/: CMakeLists.txt  RobotiqController.cpp  RobotiqController.hh
res/robotiq140_config/: robotiq140.urdf
res/ur10_moveit_config/: controllers.yaml  fake_controllers.yaml  fake_driver.yaml  joint_limits.yaml  ur10.srdf  ur10.urdf  ur10_robotiq140.srdf  ur10_robotiq140.urdf
res/ur5_moveit_config/: fake_controllers.yaml  ompl_planning.yaml  start_positions.yaml  ur5.urdf
resource/models/robotiq140/: model.config  model.sdf  model.sdf.xmacro  robotiq140.def.xmacro
resource/models/ur10/: model.config  model.sdf  model.sdf.xmacro  ur10.def.xmacro
resource/models/ur3/: model.config  model.sdf  ur3.def.xacro
resource/models/ur5/: ur5.def.xacro
resource/models/ur5/meshes/: model.config
resource/sdf/: ur10_robotiq140.sdf.xmacro  ur10_ros.sdf.xmacro
resource/ur10_moveit_config/: controller_position.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  start_positions.yaml
resource/ur5_moveit_config/: controllers.yaml  moveit_cpp.yaml  ur5.srdf
resource/urdf/: robotiq140.urdf  ur10.urdf  ur10_ros_control.urdf  ur10_ros_control.urdf.xmacro  ur5.urdf
resource/worlds/: empty_world.sdf  test_world.sdf
scripts/: moveit2.py  pose_goal_test.py  test_gripper.py
src/: joint_position_controller.cpp  joint_state_publisher.cpp  joint_state_publisher_main.cpp  joint_trajectory_controller.cpp
worlds/: test.sdf  ur10_robotiq140_world.sdf  ur10_world.sdf
