<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>universal_robot_ign</name>
    <version>1.0.0</version>
    <description>Ignition Simulator for Universal Robot (UR)</description>
    <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <depend>ros_ign_gazebo</depend>
    <exec_depend>ros_ign_bridge</exec_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>

